--- a/services/react/src/static/css/index.css
+++ b/services/react/src/static/css/index.css
@@ -1,6 +1,10 @@
 body {
-	background-color: #161718;
+	background-color: #292b2c;
 	color: #fff;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
 }
 
 h2, .h2 {
