Updated styles for desktop view
created responsive layouts for screens +768px

--- a/services/react/src/static/css/footer.css
+++ b/services/react/src/static/css/footer.css
@@ -1,13 +1,14 @@
 .footer {
 		background-color: #000;
 		color: #fff;
-		/* padding: 50px 0 35px 0; */
+		padding: 50px 35px;
 		display: grid;
 		grid-template-rows: auto;
 		grid-auto-columns: auto;
 		grid-template-areas:
 			"get about"
 			"help community";
+		justify-content: space-around;
 }
 .footer h3 {
 		text-transform: uppercase;
@@ -26,6 +27,14 @@
 }
 .footer a:hover {
 	text-decoration: underline;
+}
+@media only screen and (min-width: 768px) {
+	.footer {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-around;
+	}
 }
 
 .getbass {
