--- a/services/react/src/static/css/infobarB.css
+++ b/services/react/src/static/css/infobarB.css
@@ -1,22 +1,34 @@
 .infobarB {
-	background-color: #000;
 	display: grid;
 	grid-template-rows: auto;
 	grid-template-columns: auto;
 	grid-template-areas:
 		"image"
 		"info";
-	padding: 2rem;
+	background-color: #000;
+	width: 100%;
 }
 .infobarB .info-image {
 	grid-area: image;
 	max-width: inherit;
 	max-height: inherit;
-	/* width: 450px; */
-	/* height: 300px; */
 }
 .infobarB .info {
 	grid-area: info;
+}
+@media only screen and (min-width: 768px) {
+	.infobarB {
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+	}
+	.infobarB .info-image {
+		max-width: 450px;
+		max-height: 300px;
+	}
+	.infobarB .info {
+		max-width: 450px;
+	}
 }
 
 .info-header {
